Alterações nos usecases e alteração na documentação com o swagger
